# minishell

./: .gitignore  .huge_file.txt.swp  CMakeLists.txt  Makefile  README.md  all_signal.c  built_in.c  built_in2.c  free.c  init.c  linked_lists.c  main.c  minishell  minishell.h  parsing.c  redir_std.c
includes/: minishell.h
libft/: Makefile  digit_count.c  ft_atoi.c  ft_auxiliary_functions.c  ft_bzero.c  ft_calloc.c  ft_checkc.c  ft_fill_struct.c  ft_int_hexmax.c  ft_int_hexmin.c  ft_intlen.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_itoa.c  ft_list_one.c  ft_list_two.c  ft_lstadd_back.c  ft_lstadd_front.c  ft_lstclear.c  ft_lstdelone.c  ft_lstiter.c  ft_lstlast.c  ft_lstmap.c  ft_lstnew.c  ft_lstsize.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memmove.c  ft_memset.c  ft_output.c  ft_output_other.c  ft_output_otherss.c  ft_printf.c  ft_printf_utils.c  ft_putchar.c  (+34 more)
srcs/: main.c  redir_std.c
srcs/built_in/: binary_things.c  built_in.c  built_in2.c  built_in3.c  built_in4.c  cd_things.c  cmp_size_and_cmd.c  do_export.c  do_pipe.c  do_redir.c  echo_things.c  env_things.c  exit_error.c  key_n_value_error.c  pipe_and_redir.c  pure_shell.c
srcs/free/: free.c  secure_free.c
srcs/linked_lists/: linked_lists.c
srcs/parsing/: backsl_and_quote.c  char_and_int.c  char_and_key.c  colon_and_count.c  colon_count_split.c  control_and_dollar.c  ctrl_n_doll_utils.c  directories.c  double_error_handling.c  error_handling.c  get_something.c  key_move.c  move_remove_add.c  parsing.c  parsing1.c  parsing_args.c  parsing_space.c  parsing_utils.c  parsing_utils1.c  read_everything.c  read_everything1.c  read_everything2.c  read_everything3.c  read_everything_suite.c  redir_and_swap.c  space_dollar_args.c  split_by_empty.c  str_manipulations.c  transform.c
srcs/redir/: do_pipe.c  do_redir.c  redir_std.c
srcs/shell_init/: begin_shell.c  init.c  init_info.c
(+12 files in other folders)
